--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
 
 <P>
-    I'm now a Lecturer (as Assistant Professor in US) in Department of Computer Science, University of Manchester.
+    I'm now a <a href="https://www.research.manchester.ac.uk/portal/en/researchers/jiaoyan-chen(e7dbe8f6-87da-438c-b3aa-07b63a63f689).html">Lecturer</a>
+    (as Assistant Professor in US) in Department of Computer Science, University of Manchester.
     I also act as an academic visitor of Department of Computer Science and a senior common room member of Oriel College, in University of Oxford.
 </P>
 
