--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ In recent five years, I mainly work for the following aspects.
 <li style="margin-bottom:5px">"Knowledge Graph Curation with Deep Learning". Southeast University, Nanjing, China, 08/2019 </li>
 </ul></p>
 
-<h4>Student Supervision</h4>
+<h4>Student (Co-)Supervision</h4>
 <p><ul>
     <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 2022 - now)</li>
     <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - now)</li>
