--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <P>
     I'm now a <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">Lecturer</a>
-    (as Assistant Professor in US) in Department of Computer Science, University of Manchester.
+    (Assistant Professor) in Department of Computer Science, University of Manchester.
     I also act as an academic visitor of Department of Computer Science and a senior common room member of Oriel College, in University of Oxford.
 </P>
 
@@ -71,19 +71,24 @@ In recent five years, I mainly work for the following aspects.
     These works are a part of the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
     project of the Alan Turing Institute, the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">Knowledge Graph Construction for Personalisation</A>
     project funded by Samsung Research UK,
-    and the EPSRC <b><A href="https://gow.epsrc.ukri.org/NGBOViewGrant.aspx?GrantRef=EP/V050869/1">ConCur</A></b> project.
-    Relevant topics include knowledge graph (ontology) embedding, reasoning, alignmet, completion, schema learning, quality assurance, etc.
+    the EPSRC <b><A href="https://gow.epsrc.ukri.org/NGBOViewGrant.aspx?GrantRef=EP/V050869/1">ConCur</A></b> project, etc.
+    Relevant topics include knowledge graph (ontology) embedding, reasoning, alignmet, completion, quality assurance, etc.
 </li>
 
 </li>
-    <li style="margin-bottom:5px"><b>Zero-shot learning, Transfer Learning and Machine Learning Explanation</b>.
-        These works involve <b>Neural-Symbolic</b> solutions utilizing knowledge graphs,
-        in collaboration with  <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A> and Wen Zhang from Zhejiang University,
+    <li style="margin-bottom:5px"><b>Zero-shot learning, Transfer Learning, Machine Learning Guidance and Explainability</b>.
+        These works involve <b>Neural-Symbolic</b> solutions utilizing knowledge graphs.
+        I collaborate with  <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A> and Wen Zhang from Zhejiang University,
         <A href="http://knowledge-representation.org/">Jeff Z. Pan</A> from The University of Edinburgh and so on.
 </li>
 </ul>
 
 </p>
+
+<P>
+    I am recruiting new PhD students on <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35930">knowledge graph construction</A>
+    and <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35920">knowledge graph for machine learning guidance and explainability</A>.
+</P>
 
 <h4>Research Grants</h4>
 <p><ul>
@@ -99,24 +104,20 @@ In recent five years, I mainly work for the following aspects.
     </ul>
 </p>
 
-<h4>Academic Activities</h4>
+<h4>Academic Services</h4>
 <p><ul>
 <li style="margin-bottom:5px">Editor Board of Data Intelligence Journal (2021 -- now).</li>
 <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- now).</li>
-<li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-iswc-2022/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in ISWC 2022 (October 23 - 27). Jiaoyan Chen, Yuxia Geng, Yufeng Huang, Huajun Chen. </li>
-<li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching</A>. OAEI Track in ISWC 2022 (October 23 - 27). Yuan He, Jiaoyan Chen, Hang Dong, Ernesto Jiménez-Ruiz and Ian Horrocks. </li>
+<li style="margin-bottom:5px">Organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC 2022 (October 23 - 27). </li>
 <li style="margin-bottom:5px">Guest Editor of the JoWS special issue <A href="https://www.journals.elsevier.com/journal-of-web-semantics/call-for-papers/automating-knowledge-graph-construction">"Automating Knowledge Graph Construction"</A>.</li>
-<li style="margin-bottom:5px">Organization of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019, 2020, 2021, 2022).</li>
+<li style="margin-bottom:5px">Organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019, 2020, 2021, 2022).</li>
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
-<li style="margin-bottom:5px">Best reviewer of CCKS'21.</li>
 <li style="margin-bottom:5px">PC/SPC of IJCAI, AAAI, ISWC, WWW, ACL, EMNLP, KDD, ECML-PKDD, CIKM, ESWC, OM, NeSy, CCKS, etc.</li>
 </ul></p>
 
 <h4> Industrial Activities</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Member of <A href="https://sirius-labs.no/data-science/">Data Science Program of SIRIUS in Norway.</A> I help co-supervise students,
-        such as <A href="https://www.linkedin.com/in/erik-bryhn-myklebust-44b34087/?locale=en_US">Erik Bryhn Myklebust</A> for
-        research on knowledge graph-based ecotoxicological effect prediction. (11/2017 - now) </li>
+    <li style="margin-bottom:5px">Member of <A href="https://sirius-labs.no/data-science/">SIRIUS Centre for Scalable Data Access </A> in Norway. (11/2017 - now) </li>
 <li style="margin-bottom:5px">Consultant on knowledge graph construction (in collaboration with Xi Chen), Jarvis Lab of Tencent Technology, Shenzhen, China. (03/2020 - 02/2021)</li>
 <li style="margin-bottom:5px">Consultant, Oxford Semantic Technology, Oxford, UK. (12/2019 - 02/2020)</li>
 <li style="margin-bottom:5px">Enterprise Fellow of MPLS Division of University of Oxford. (10/2019 - 09/2020)</li>
@@ -126,7 +127,7 @@ In recent five years, I mainly work for the following aspects.
 <p><ul>
     <li style="margin-bottom: 5px">Jiaoyan Chen, Yuan He, Yuxia Geng, Ernesto Jimenez-Ruiz, Hang Dong, Ian Horrocks. "Contextual Semantic Embeddings for Ontology Subsumption Prediction". Under work. <A href="https://arxiv.org/pdf/2202.09791.pdf">Pre-print</A></li>
     <li style="margin-bottom: 5px">Wen Zhang, Jiaoyan Chen, Juan Li, Zezhong Xu, Jeff Z Pan, Huajun Chen. "Knowledge Graph Reasoning with Logics and Embeddings: Survey and Perspective". Under work. <A href="https://arxiv.org/pdf/2202.07412.pdf">Pre-print</A> </li>
-    <li style="margin-bottom:5px">Jiaoyan Chen, Yuxia Geng, Zhuo Chen, Jeff Z. Pan, Yuan He, Wen Zhang, Ian Horrocks and Huajun Chen. "Low-resource Learning with Knowledge Graphs: A Comprehensive Survey". <b>New</b> survey paper under revision. <A href="https://arxiv.org/abs/2112.10006">Pre-print</A></li>
+    <li style="margin-bottom:5px">Jiaoyan Chen, Yuxia Geng, Zhuo Chen, Jeff Z. Pan, Yuan He, Wen Zhang, Ian Horrocks and Huajun Chen. "Zero-shot and Few-shot Learning with Knowledge Graphs: A Comprehensive Survey". <b>New</b> survey paper under revision. <A href="https://arxiv.org/abs/2112.10006">Pre-print</A></li>
     <li style="margin-bottom:5px">Yuxia Geng, Jiaoyan Chen, Wen Zhang, Jeff Z. Pan, Mingyang Chen, Huajun Chen, Song Jiang. "Relational Message Passing for Fully Inductive Knowledge Graph Completion". ICDE 2023 (accepted). <A href="https://arxiv.org/abs/2210.03994">Pre-print</A></li>
     <li style="margin-bottom:5px">Yuxia Geng, Jiaoyan Chen, Wen Zhang, Yajing Xu, Zhuo Chen, Jeff Z. Pan, Yufeng Huang, Feiyu Xiong, Huajun Chen. "Disentangled Ontology Embedding for Zero-shot Learning". KDD 2022. <A href="https://arxiv.org/abs/2206.03739">Paper</A>, <A href="https://github.com/zjukg/DOZSL">Github</A></li>
     <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ernesto Jimenez-Ruiz, Ali Hadian and Ian Horrocks. "Machine Learning-Friendly Biomedical Datasets for Equivalence and Subsumption Ontology Matching". ISWC 2022 (<b>Best Resource Paper Candidate</b>). <A href="https://arxiv.org/abs/2205.03447">Paper,</A><A href="https://github.com/KRR-Oxford/DeepOnto">Github</A></li>
@@ -162,21 +163,23 @@ In recent five years, I mainly work for the following aspects.
 <P>&nbsp&nbsp&nbsp&nbsp&nbsp <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works&sortby=pubdate" target=_blank>See Google Scholar</A>.
 </P>
 
-<h4>Teaching</h4>
-<p><ul>
-<li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/teaching/courses/2021-2022/ai/">"Artificial Inteligence"</A>. Department of Computer Science, University of Oxford. Group Course Teaching. Hilary Term 2022. </li>
-<li style="margin-bottom:5px">"Knowledge Representation and Reasoning (English)". Southeast University, China. Guest Lecturer. Autumn, 2021 - 2024. </li>
-<li style="margin-bottom:5px">"Knowledge Graph Construction, Curation and Its Machine Learning Applications". 2021年江苏省研究生地理大数据与空间智能暑期学校(Summer School on Big Geo Data and AI for Graduate Student, Jiangsu Province, 2021), online, China. 08/2021. <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/Jiangsu_Geo_082021.pdf">Slide</a></li>
-<li style="margin-bottom:5px">“Augmenting Machine Learning with Knowledge Base”, University of Aberdeen, Aberdeen, UK, 01/2018 (Invited Lecture to the course of CS551J Knowledge Representation and Reasoning by Jeff Z. Pan)</li>
-</ul></p>
 
-<h4>Selective Invited Talks </h4>
+<h4>Invited Talks and Tutorials</h4>
 <p><ul>
+<li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-iswc-2022/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in ISWC 2022 (October 23 - 27). Jiaoyan Chen, Yuxia Geng, Yufeng Huang, Huajun Chen. </li>
 <li style="margin-bottom:5px">"Knowledge Graphs: Theory & Applications". eBay, California, USA (online). In conjunction with Prof. Ian Horrocks. 09/2021. <A href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/20210916-eBay-merged.pdf">Slides.</A>
+<li style="margin-bottom:5px">"Knowledge Graph Construction, Curation and Its Machine Learning Applications". 2021年江苏省研究生地理大数据与空间智能暑期学校 (Summer School on Big Geo Data and AI for Graduate Student, Jiangsu Province, 2021), online, China. 08/2021. <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/Jiangsu_Geo_082021.pdf">Slide</a></li>
 <li style="margin-bottom:5px">"Knowledge-driven Zero-shot Learning". Conference on "Data Intelligence and Knowledge Service" organized by the Data Intelligence journal. Hybrid (online and Nanjing), China. 07/2021. <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/DI_Meeting_11072021_JiaoyanChen.pdf">Slides</a></li>
 <li style="margin-bottom:5px">"Knowledge Graph Curation with Deep Learning and Semantic Reasoning". Tencent Technology, Shenzhen, China, 10/2019. <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/Tencent_Oct24_2019.pdf">Slides</a></li>
 <li style="margin-bottom:5px">"Knowledge Graph Curation with Deep Learning and Semantic Reasoning". Southern University of Science and Technology, Shenzhen, China, 10/2019.
 <li style="margin-bottom:5px">"Knowledge Graph Curation with Deep Learning". Southeast University, Nanjing, China, 08/2019 </li>
+</ul></p>
+
+<h4>Teaching</h4>
+<p><ul>
+<li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/teaching/courses/2021-2022/ai/">"Artificial Inteligence"</A>. Department of Computer Science, University of Oxford. Group Class Teaching. Hilary Term 2022. </li>
+<li style="margin-bottom:5px">"Knowledge Representation and Reasoning (English)". Southeast University, China. Guest Lecture. Autumn Term of 2021 and 2022. </li>
+<li style="margin-bottom:5px">“Augmenting Machine Learning with Knowledge Base”, University of Aberdeen, Aberdeen, UK, 01/2018 (Guest Lecture to the course of CS551J Knowledge Representation and Reasoning by Jeff Z. Pan)</li>
 </ul></p>
 
 <h4>Student (Co-)Supervision</h4>
