--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
 <P>
 Before that, I was a Senior Researcher (Research Co-Investigator) at Department of Computer Science, University of Oxford
 and a member of Data and Knowledge Group led by <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>.
-I was also previously a PostDoctoral Researcher in <A href="https://www.geog.uni-heidelberg.de/gis/index_en.html">GIScience Group</A>
-    led by <a href="https://www.geog.uni-heidelberg.de/gis/zipf.html">Prof. Alexander Zipf</a> in Heidelberg University.
-    I got my Ph.D in Computer Science and Technology in Zhejiang University, supervised by Prof. Zhaohui Wu and
-    <A href="https://person.zju.edu.cn/en/huajun">Prof. Huajun Chen</A>,
-    acted as as a visiting student of Zurich University, supervised by <A href="https://sustchud.github.io/">Prof. Daning Hu</A>,
+I was also previously a PostDoctoral Researcher in <A href="https://www.geog.uni-heidelberg.de/gis/index_en.html">GIScience Group</A> in Heidelberg University.
+    I got my Ph.D in Computer Science and Technology in Zhejiang University (supervised by Prof. <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A>, acted as a visiting student of Zurich University,
     and got my Bachelor degree in Computer Science and Technology in Zhejiang University.
 </P>
 
@@ -59,7 +56,7 @@ I was also previously a PostDoctoral Researcher in <A href="https://www.geog.uni
 
 <h4>Research Interests</h4>
 <P>
-I'm interested in a few knowledge graph related topics including Knowledge Graph Construction and Curation, Knowledge Graph Embedding and Reasoning, Knowledge Graph-based Zero-shot and Transfer Learning,
+I'm interested in knowledge graph (including ontology) research including Knowledge Graph Construction and Curation, Knowledge Graph Embedding and Reasoning, Knowledge Graph-based Zero-shot and Transfer Learning,
     Semantic Web, Neuro-Symbolic AI with Knowledge Graph, etc.
 </P>
 
@@ -98,7 +95,7 @@ In recent five years, I mainly work for the following aspects.
     </li>
 
     <li style="margin-bottom:5px">
-        Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 44K GBP, 11/2022 - 04/2023, PI.
+        Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 19K GBP, 11/2022 - 04/2023, PI.
     </li>
 
     </ul>
@@ -106,6 +103,7 @@ In recent five years, I mainly work for the following aspects.
 
 <h4>Academic Services</h4>
 <p><ul>
+    <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 -- now).</li>
 <li style="margin-bottom:5px">Editor Board of Data Intelligence Journal (2021 -- now).</li>
 <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- now).</li>
 <li style="margin-bottom:5px">Organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC 2022 (October 23 - 27). </li>
@@ -125,10 +123,16 @@ In recent five years, I mainly work for the following aspects.
 
 <h4>Selective Publications</h4>
 <p><ul>
-    <li style="margin-bottom: 5px">Jiaoyan Chen, Yuan He, Yuxia Geng, Ernesto Jimenez-Ruiz, Hang Dong, Ian Horrocks. "Contextual Semantic Embeddings for Ontology Subsumption Prediction". Under work. <A href="https://arxiv.org/pdf/2202.09791.pdf">Pre-print</A></li>
+    <li style="margin-bottom: 5px">Mathias Jackermeier, Jiaoyan Chen, Ian Horrocks. "Box^2EL: Concept and Role Box Embeddings for the Description Logic EL++". Under work. <A href="https://arxiv.org/abs/2301.11118">Pre-print</A> </li>
+    <li style="margin-bottom: 5px">Hang Dong, Jiaoyan Chen, Yuan He, Yinan Liu, Ian Horrocks. "Reveal the Unknown: Out-of-Knowledge-Base Mention Discovery with Entity Linking Authors". Under work. <A href="https://arxiv.org/abs/2302.07189">Pre-print</A> </li>
+    <li style="margin-bottom: 5px">Yuan He, Jiaoyan Chen, Ernesto Jiménez-Ruiz, Hang Dong, Ian Horrocks. "Language Model Analysis for Ontology Subsumption Inference". Under work. <A href="https://arxiv.org/abs/2302.06761">Pre-print</A> </li>
     <li style="margin-bottom: 5px">Wen Zhang, Jiaoyan Chen, Juan Li, Zezhong Xu, Jeff Z Pan, Huajun Chen. "Knowledge Graph Reasoning with Logics and Embeddings: Survey and Perspective". Under work. <A href="https://arxiv.org/pdf/2202.07412.pdf">Pre-print</A> </li>
-    <li style="margin-bottom:5px">Jiaoyan Chen, Yuxia Geng, Zhuo Chen, Jeff Z. Pan, Yuan He, Wen Zhang, Ian Horrocks and Huajun Chen. "Zero-shot and Few-shot Learning with Knowledge Graphs: A Comprehensive Survey". <b>New</b> survey paper under revision. <A href="https://arxiv.org/abs/2112.10006">Pre-print</A></li>
-    <li style="margin-bottom:5px">Yuxia Geng, Jiaoyan Chen, Wen Zhang, Jeff Z. Pan, Mingyang Chen, Huajun Chen, Song Jiang. "Relational Message Passing for Fully Inductive Knowledge Graph Completion". ICDE 2023 (accepted). <A href="https://arxiv.org/abs/2210.03994">Pre-print</A></li>
+    <li style="margin-bottom:5px">Jiaoyan Chen, Yuxia Geng, Zhuo Chen, Jeff Z. Pan, Yuan He, Wen Zhang, Ian Horrocks and Huajun Chen. "Zero-shot and Few-shot Learning with Knowledge Graphs: A Comprehensive Survey". Submitted to Proceedings of the IEEE (under minor revision). <A href="https://arxiv.org/abs/2112.10006">Pre-print</A></li>
+    <li style="margin-bottom: 5px">Jiaoyan Chen, Yuan He, Yuxia Geng, Ernesto Jimenez-Ruiz, Hang Dong, Ian Horrocks. "Contextual Semantic Embeddings for Ontology Subsumption Prediction". World Wide Web Journal (accepted). <A href="https://arxiv.org/pdf/2202.09791.pdf">Pre-print</A></li>
+    <li style="margin-bottom: 5px">Nan Hu, Yike Wu, Guilin Qi, Dehai Min, Jiaoyan Chen, Jeff Z Pan, Zafar Ali. "An Empirical Study of Pre-trained Language Models in Simple Knowledge Graph Question Answering". World Wide Web Journal (accepted). <A href="https://arxiv.org/abs/2303.10368">Pre-print</A></li>
+    <li style="margin-bottom:5px">Yangning Li, Jiaoyan Chen, Yinghui Li, Yuejia Xiang, Xi Chen, Hai-Tao Zheng. "Vision, Deduction and Alignment: An Empirical Study on Multi-modal Knowledge Graph Alignment". ICASSP 2023. <A href="https://arxiv.org/abs/2302.08774">Paper</A></li>
+    <li style="margin-bottom:5px">Zhuo Chen, Yufeng Huang, Jiaoyan Chen, Yuxia Geng, Wen Zhang, Yin Fang, Jeff Z Pan, Wenting Song, Huajun Chen. "DUET: Cross-modal Semantic Grounding for Contrastive Zero-shot Learning". AAAI 2023. <A href="https://arxiv.org/abs/2207.01328">Paper</A></li>
+    <li style="margin-bottom:5px">Yuxia Geng, Jiaoyan Chen, Wen Zhang, Jeff Z. Pan, Mingyang Chen, Huajun Chen, Song Jiang. "Relational Message Passing for Fully Inductive Knowledge Graph Completion". ICDE 2023. <A href="https://arxiv.org/abs/2210.03994">Paper</A></li>
     <li style="margin-bottom:5px">Yuxia Geng, Jiaoyan Chen, Wen Zhang, Yajing Xu, Zhuo Chen, Jeff Z. Pan, Yufeng Huang, Feiyu Xiong, Huajun Chen. "Disentangled Ontology Embedding for Zero-shot Learning". KDD 2022. <A href="https://arxiv.org/abs/2206.03739">Paper</A>, <A href="https://github.com/zjukg/DOZSL">Github</A></li>
     <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ernesto Jimenez-Ruiz, Ali Hadian and Ian Horrocks. "Machine Learning-Friendly Biomedical Datasets for Equivalence and Subsumption Ontology Matching". ISWC 2022 (<b>Best Resource Paper Candidate</b>). <A href="https://arxiv.org/abs/2205.03447">Paper,</A><A href="https://github.com/KRR-Oxford/DeepOnto">Github</A></li>
     <li style="margin-bottom:5px">Zhuo Chen, Yufeng Huang, Jiaoyan Chen, Yuxia Geng, Yin Fang, Jeff Z. Pan, Ningyu Zhang, Wen Zhang. "LaKo: Knowledge-driven Visual Question Answering via Late Knowledge-to-Text Injection". IJCKG 2022 (<b>Best Application Paper</b>). </li>
