--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ In recent five years, I mainly work for the following aspects.
 <p><ul>
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 -- now).</li>
 <li style="margin-bottom:5px">Editor Board of Data Intelligence Journal (2021 -- now).</li>
-<li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- now).</li>
+<li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- 2023).</li>
 <li style="margin-bottom:5px">Organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC 2022 (October 23 - 27). </li>
 <li style="margin-bottom:5px">Guest Editor of the JoWS special issue <A href="https://www.journals.elsevier.com/journal-of-web-semantics/call-for-papers/automating-knowledge-graph-construction">"Automating Knowledge Graph Construction"</A>.</li>
 <li style="margin-bottom:5px">Organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019, 2020, 2021, 2022).</li>
