--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@ In recent five years, I mainly work for the following aspects.
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 -- now).</li>
 <li style="margin-bottom:5px">Editor Board of Data Intelligence Journal (2021 -- now).</li>
 <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- 2023).</li>
-<li style="margin-bottom:5px">Organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC 2022 (October 23 - 27). </li>
-<li style="margin-bottom:5px">Guest Editor of the JoWS special issue <A href="https://www.journals.elsevier.com/journal-of-web-semantics/call-for-papers/automating-knowledge-graph-construction">"Automating Knowledge Graph Construction"</A>.</li>
+<li style="margin-bottom:5px">Organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC 2022. </li>
+<li style="margin-bottom:5px">Guest Editor of the Journal of Web Semantics special issue <A href="https://www.journals.elsevier.com/journal-of-web-semantics/call-for-papers/automating-knowledge-graph-construction">"Automating Knowledge Graph Construction"</A>.</li>
 <li style="margin-bottom:5px">Organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019, 2020, 2021, 2022).</li>
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
-<li style="margin-bottom:5px">PC/SPC of IJCAI, AAAI, ISWC, WWW, ACL, EMNLP, KDD, ECML-PKDD, CIKM, ESWC, OM, NeSy, CCKS, etc.</li>
+<li style="margin-bottom:5px">PC/SPC of many conferences including IJCAI, AAAI, ISWC, WWW, ACL, EMNLP, KDD, ECML-PKDD, CIKM, ESWC, OM, NeSy, CCKS, etc.</li>
 </ul></p>
 
 <h4> Industrial Activities</h4>
@@ -168,7 +168,7 @@ In recent five years, I mainly work for the following aspects.
 </P>
 
 
-<h4>Invited Talks and Tutorials</h4>
+<h4>Selective Invited Talks and Tutorials</h4>
 <p><ul>
 <li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-iswc-2022/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in ISWC 2022 (October 23 - 27). Jiaoyan Chen, Yuxia Geng, Yufeng Huang, Huajun Chen. </li>
 <li style="margin-bottom:5px">"Knowledge Graphs: Theory & Applications". eBay, California, USA (online). In conjunction with Prof. Ian Horrocks. 09/2021. <A href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/20210916-eBay-merged.pdf">Slides.</A>
