--- a/index.html
+++ b/index.html
@@ -39,17 +39,15 @@
 
 
 <P>
-    I'm now a <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">Lecturer</a>
-    (Assistant Professor) in Department of Computer Science, University of Manchester.
-    I also act as an academic visitor of Department of Computer Science and a senior common room member of Oriel College, in University of Oxford.
+    Since 11/2022, I have been a permanent <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">Lecturer</a>
+    (Assistant Professor) in Department of Computer Science, University of Manchester, and an academic visitor of Department of Computer Science and a senior common room member of Oriel College in University of Oxford.
 </P>
 
 <P>
-Before that, I was a Senior Researcher (Research Co-Investigator) at Department of Computer Science, University of Oxford
-and a member of Data and Knowledge Group led by <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>.
-I was also previously a PostDoctoral Researcher in <A href="https://www.geog.uni-heidelberg.de/gis/index_en.html">GIScience Group</A> in Heidelberg University.
-    I got my Ph.D in Computer Science and Technology in Zhejiang University (supervised by Prof. <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A>, acted as a visiting student of Zurich University,
-    and got my Bachelor degree in Computer Science and Technology in Zhejiang University.
+I was a full-time Senior Researcher at Department of Computer Science, University of Oxford, led by <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A> from 2017 to 2022.
+Before that, I also very shortly worked as a PostDoctoral Researcher in <A href="https://www.geog.uni-heidelberg.de/gis/index_en.html">GIScience Group</A> in Heidelberg University.
+    I got my Ph.D in Computer Science and Technology in Zhejiang University in 2016, supervised by Prof. <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A>, and my Bachelor degree in Computer Science and Technology in Zhejiang University.
+    I was a visiting student of Zurich University from 2014 to 2015.
 </P>
 
 
@@ -182,7 +180,7 @@ In recent five years, I mainly work for the following aspects.
 <h4>Selective Invited Talks and Tutorials</h4>
 <p><ul>
 <li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-ijcai-2023/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in IJCAI 2023 (August 19 - 25). Yuxia Geng, Zhuo Chen, Jiaoyan Chen, Wen Zhang, Jeff Z. Pan. </li>
-<li style="margin-bottom:5px">"Knowledge Graph Construction, Curation and Its Machine Learning Applications". Shanghai Jiaotong University (Information System Group). Shanghai, China. 19/05/2023. <A href="https://github.com/ChenJiaoyan/ChenJiaoyan.github.io/files/SH_Jiaotong_19052023.pdf">Slides.</A>
+<li style="margin-bottom:5px">"Knowledge Graph Construction, Curation and Its Machine Learning Applications". Shanghai Jiaotong University (Information System Group). Shanghai, China. 19/05/2023. <A href="https://github.com/ChenJiaoyan/ChenJiaoyan.github.io/blob/main/files/SH_Jiaotong_19052023.pdf">Slides.</A>
 <li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-iswc-2022/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in ISWC 2022 (October 23 - 27). Jiaoyan Chen, Yuxia Geng, Yufeng Huang, Huajun Chen. </li>
 <li style="margin-bottom:5px">"Knowledge Graphs: Theory & Applications". eBay, California, USA (online). In conjunction with Prof. Ian Horrocks. 09/2021. <A href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/20210916-eBay-merged.pdf">Slides.</A>
 <li style="margin-bottom:5px">"Knowledge Graph Construction, Curation and Its Machine Learning Applications". 2021年江苏省研究生地理大数据与空间智能暑期学校 (Summer School on Big Geo Data and AI for Graduate Student, Jiangsu Province, 2021), online, China. 08/2021. <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/Jiangsu_Geo_082021.pdf">Slide</a></li>
