--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
 <span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
-      <p>Twitter: <a href="https://twitter.com/ChenJiaoyan1">@ChenJiaoyan1</a></p>
+      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a></p>
       </div>
       <!--<h4>Tools</h4>
 
@@ -39,7 +39,7 @@
 
 
 <P>
-    Since 11/2022, I have been a permanent <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">Lecturer</a>
+    Since 11/2022, I have been a permanent Lecturer
     (Assistant Professor) in Department of Computer Science, University of Manchester, and an academic visitor of Department of Computer Science and a senior common room member of Oriel College in University of Oxford.
 </P>
 
