--- a/index.html
+++ b/index.html
@@ -40,52 +40,48 @@
 
 <P>
     Since 11/2022, I have been a permanent Lecturer
-    (Assistant Professor) in Department of Computer Science, University of Manchester, and an academic visitor of Department of Computer Science and a senior common room member of Oriel College in University of Oxford.
+    (Assistant Professor) in Department of Computer Science, University of Manchester. I'm also a part-time Senior Researcher of Department of Computer Science, University of Oxford.
 </P>
 
 <P>
-I was a full-time Senior Researcher at Department of Computer Science, University of Oxford, led by <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A> from 2017 to 2022.
-Before that, I also very shortly worked as a PostDoctoral Researcher in <A href="https://www.geog.uni-heidelberg.de/gis/index_en.html">GIScience Group</A> in Heidelberg University.
-    I got my Ph.D in Computer Science and Technology in Zhejiang University in 2016, supervised by Prof. <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A>, and my Bachelor degree in Computer Science and Technology in Zhejiang University.
-    I was a visiting student of Zurich University from 2014 to 2015.
+Before that, I was a full-time Senior Researcher at Department of Computer Science, University of Oxford, led by <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>,
+worked very shortly as a PostDoctoral Researcher  in Heidelberg University.
+    I got my Ph.D in Computer Science and Technology in Zhejiang University in 2016, supervised by Prof. <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A>, and my Bachelor degree in Computer Science and Technology in Zhejiang University in 2011.
+    I was a visiting student of Department of Informatics, Zurich University from 2014 to 2015.
 </P>
 
 
 
 <h4>Research Interests</h4>
 <P>
-I'm interested in knowledge graph (including ontology) research including Knowledge Graph Construction and Curation, Knowledge Graph Embedding and Reasoning, Knowledge Graph-based Zero-shot and Transfer Learning,
-    Semantic Web, Neuro-Symbolic AI with Knowledge Graph, etc.
+My research interests focus on knowledge graph, mainly including
 </P>
 
-In recent five years, I mainly work for the following aspects.
 <p><ul>
 
 
-<li style="margin-bottom:5px"> <b>Knowledge Graph Construction and Curation</b>.
-    These works are a part of the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
-    project of the Alan Turing Institute, the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">Knowledge Graph Construction for Personalisation</A>
-    project funded by Samsung Research UK,
-    the EPSRC <b><A href="https://gow.epsrc.ukri.org/NGBOViewGrant.aspx?GrantRef=EP/V050869/1">ConCur</A></b> project, etc.
-    Relevant topics include knowledge graph (ontology) embedding, reasoning, alignmet, completion, quality assurance, etc.
+<li style="margin-bottom:5px"> <b>Knowledge Graph Construction</b>: the embedding, alignment, completion, population, quality assurance of knowledge graphs (OWL ontologies).
 </li>
 
+    <li style="margin-bottom:5px"> <b>Semantic Table Understanding</b> with knowledge graphs and machine learning.
+    </li>
+<li style="margin-bottom:5px"> <b>Language Model</b>: exploring language models for constructing knowledge graphs, and supporting semantic embedding and reasoning.
+
 </li>
-    <li style="margin-bottom:5px"><b>Zero-shot learning, Transfer Learning, Machine Learning Guidance and Explainability</b>.
-        These works involve <b>Neural-Symbolic</b> solutions utilizing knowledge graphs.
-        I collaborate with  <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A> and Wen Zhang from Zhejiang University,
-        <A href="http://knowledge-representation.org/">Jeff Z. Pan</A> from The University of Edinburgh and so on.
+
+    <li style="margin-bottom:5px"><b>Machine Learning</b>:
+        knowledge-aware zero-shot and transfer learning, inductive knowledge graph completion, knowledge-augmented explanation.
 </li>
 </ul>
 
 </p>
 
 <P>
-    I am recruiting new PhD students on <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35930">knowledge graph construction</A>
-    and <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35920">knowledge graph for machine learning guidance and explainability</A>.
+    I am <b>recruiting PhD students</b>! All the knowledge graph related topics are very welcomed. Please email your CV to me or directly apply through <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35930">link1</A> or
+    and <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35920">link2</A>.
 </P>
 
-<h4>Research Grants</h4>
+<h4>Research Grants and Projects</h4>
 <p><ul>
 
      <li style="margin-bottom:5px">
@@ -97,6 +93,12 @@ In recent five years, I mainly work for the following aspects.
     </li>
 
     </ul>
+</p>
+
+<p>
+    I'm also working on the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">personal knowledge graph construction</A>
+    project funded by Samsung Research UK and the e-commerce taxonomy curation projection funded by eBay. I have finished working for quite a few knowledge graph related projects such as the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
+    project of the Alan Turing Institute.
 </p>
 
 <h4>Academic Services</h4>
