--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 </P>
 
 <P>
-Before that, I was a full-time Senior Researcher at Department of Computer Science, University of Oxford, led by <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>,
-worked very shortly as a PostDoctoral Researcher  in Heidelberg University.
+Before that, I was a full-time Senior Researcher at Department of Computer Science, University of Oxford, reporting to <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>,
+and worked very shortly as a PostDoctoral Researcher in GIScience in Heidelberg University.
     I got my Ph.D in Computer Science and Technology in Zhejiang University in 2016, supervised by Prof. <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A>, and my Bachelor degree in Computer Science and Technology in Zhejiang University in 2011.
     I was a visiting student of Department of Informatics, Zurich University from 2014 to 2015.
 </P>
