--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ My research interests focus on knowledge graph, mainly including
 <p><ul>
     <li style="margin-bottom:5px">"Querying Data on the Web (COMP62421)". Department of Computer Science, The University of Manchester. 2023-2024. </li>
 <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/teaching/courses/2021-2022/ai/">"Artificial Inteligence"</A>. Department of Computer Science, University of Oxford. Group Class Teaching. Hilary Term 2022. </li>
-<li style="margin-bottom:5px">"Knowledge Representation and Reasoning (English)". Southeast University. Guest Lecture. Autumn Term of 2021 and 2022. </li>
+<li style="margin-bottom:5px">"Knowledge Representation and Reasoning (English)". Southeast University. Guest Lecture. 2021-2022, 2022-2023. </li>
 <li style="margin-bottom:5px">“Augmenting Machine Learning with Knowledge Base”, University of Aberdeen, 01/2018 (Guest Lecture to the course of CS551J Knowledge Representation and Reasoning by Jeff Z. Pan)</li>
 </ul></p>
 
