--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <P>
     Since 11/2022, I have been a permanent Lecturer
-    (Assistant Professor) in Department of Computer Science, University of Manchester. I'm also an Academic Visitor of Department of Computer Science, University of Oxford.
+    (Assistant Professor) in Department of Computer Science, University of Manchester. I'm also a part-time Senior Researcher in Department of Computer Science, University of Oxford.
 </P>
 
 <P>
