--- a/index.html
+++ b/index.html
@@ -39,28 +39,27 @@
 
 
 <P>
-    Since 11/2022, I have been a permanent Lecturer
-    (Assistant Professor) in Department of Computer Science, University of Manchester. I'm also a part-time Senior Researcher in Department of Computer Science, University of Oxford.
+    I'm a permanent Lecturer (Assistant Professor) in Department of Computer Science, University of Manchester, and also act as a part-time Senior Researcher in Department of Computer Science, University of Oxford.
 </P>
 
 <P>
 Before that, I was a full-time Senior Researcher at Department of Computer Science, University of Oxford, reporting to <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>,
 and worked very shortly as a PostDoctoral Researcher in GIScience in Heidelberg University.
-    I got my Ph.D in Computer Science and Technology in Zhejiang University in 2016, supervised by Prof. <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A>, and my Bachelor degree in Computer Science and Technology in Zhejiang University in 2011.
-    I was a visiting student of Department of Informatics, Zurich University from 2014 to 2015.
+    My Ph.D in Computer Science and Technology was awarded in Zhejiang University in 2016, with the supervision of Prof. <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A> and Prof. Zhaohui Wu, and my Bachelor degree in Computer Science and Technology was awarded in Zhejiang University as well in 2011.
+    I was a visiting student of Department of Informatics, Zurich University from 2014 to 2015, with the supervision of Dr. Daning Hu.
 </P>
 
 
 
 <h4>Research Interests</h4>
 <P>
-My research interests focus on knowledge graph, mainly including
+My research interests focus on knowledge graphs (including ontologies):
 </P>
 
 <p><ul>
 
 
-<li style="margin-bottom:5px"> <b>Knowledge Graph Construction</b>: the embedding, alignment, completion, population, quality assurance of knowledge graphs (OWL ontologies).
+<li style="margin-bottom:5px"> <b>Knowledge Graph Construction</b>: the embedding, alignment, completion, population, quality assurance of knowledge graphs.
 </li>
 
     <li style="margin-bottom:5px"> <b>Semantic Table Understanding</b> with knowledge graphs and machine learning.
@@ -77,8 +76,11 @@ My research interests focus on knowledge graph, mainly including
 </p>
 
 <P>
-    I am <b>recruiting PhD students</b>! All the knowledge graph related topics are very welcomed. Please email your CV to me or directly apply through <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35930">link1</A> or
-    and <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35920">link2</A>.
+    I am <b>recruiting PhD students</b> in UoM! All the knowledge graph related topics are very welcomed. Please email your CV to me or directly apply our projects online:
+    <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35930">Project1</A>,
+    <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35920">Project2</A>,
+    <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=36506">Project3</A>,
+    <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=36392">Project4</A>.
 </P>
 
 <h4>Research Grants and Projects</h4>
@@ -106,7 +108,7 @@ My research interests focus on knowledge graph, mainly including
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 -- now).</li>
 <li style="margin-bottom:5px">Editor Board of Data Intelligence Journal (2021 -- now).</li>
 <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- 2023).</li>
-<li style="margin-bottom:5px">Organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC 2022. </li>
+<li style="margin-bottom:5px">Organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC 2022, 2023. </li>
 <li style="margin-bottom:5px">Guest Editor of the Journal of Web Semantics special issue <A href="https://www.journals.elsevier.com/journal-of-web-semantics/call-for-papers/automating-knowledge-graph-construction">"Automating Knowledge Graph Construction"</A>.</li>
 <li style="margin-bottom:5px">Organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019, 2020, 2021, 2022).</li>
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
@@ -122,7 +124,9 @@ My research interests focus on knowledge graph, mainly including
 </ul></p>
 <h4>Selective Journal Publications</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Jiaoyan Chen, Yuxia Geng, Zhuo Chen, Jeff Z. Pan, Yuan He, Wen Zhang, Ian Horrocks and Huajun Chen. "Zero-shot and Few-shot Learning with Knowledge Graphs: A Comprehensive Survey". Proceedings of the IEEE (accepted). <A href="https://arxiv.org/abs/2112.10006">Pre-print</A></li>
+    <li style="margin-bottom:5px">Jeff Z Pan, Simon Razniewski, Jan-Christoph Kalo, Sneha Singhania, Jiaoyan Chen, Stefan Dietze, Hajira Jabeen, Janna Omeliyanenko, Wen Zhang, Matteo Lissandrini, Russa Biswas, Gerard de Melo, Angela Bonifati, Edlira Vakaj, Mauro Dragoni, Damien Graux. "Large Language Models and Knowledge Graphs: Opportunities and Challenges". Under work. <A href="https://arxiv.org/abs/2308.06374">Pre-print</A> </li>
+    <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ian Horrocks, Carlo Allocca, Taehun Kim, Brahmananda Sapkota. "DeepOnto: A Python Package for Ontology Engineering with Deep Learning". Under work. <A href="https://arxiv.org/abs/2307.03067">Pre-print</A> </li>
+    <li style="margin-bottom:5px">Jiaoyan Chen, Yuxia Geng, Zhuo Chen, Jeff Z. Pan, Yuan He, Wen Zhang, Ian Horrocks and Huajun Chen. "Zero-shot and Few-shot Learning with Knowledge Graphs: A Comprehensive Survey". Proceedings of the IEEE (2023). <A href="https://ieeexplore.ieee.org/document/10144560">Paper</A></li>
     <li style="margin-bottom: 5px">Jiaoyan Chen, Yuan He, Yuxia Geng, Ernesto Jimenez-Ruiz, Hang Dong, Ian Horrocks. "Contextual Semantic Embeddings for Ontology Subsumption Prediction". World Wide Web Journal (2023). <A href="https://link.springer.com/article/10.1007/s11280-023-01169-9">Paper</A>, <A href="https://github.com/KRR-Oxford/DeepOnto">Github</A></li>
     <li style="margin-bottom: 5px">Nan Hu, Yike Wu, Guilin Qi, Dehai Min, Jiaoyan Chen, Jeff Z Pan, Zafar Ali. "An Empirical Study of Pre-trained Language Models in Simple Knowledge Graph Question Answering". World Wide Web Journal (2023). <A href="https://link.springer.com/article/10.1007/s11280-023-01166-y">Paper</A></li>
     <li style="margin-bottom:5px">Yuxia Geng, Jiaoyan Chen, Xiang Zhuang, Zhuo Chen, Jeff Z. Pan, Juan Li, Zonggan Yuan and Huajun Chen. "Benchmarking Knowledge-driven Zero-shot Learning". Journal of Web Semantics 75 (2023): 100757. <A href="https://github.com/China-UK-ZSL/Resources_for_KZSL">Github</A>, <A href="https://doi.org/10.1016/j.websem.2022.100757">Paper</A></li>
@@ -140,10 +144,13 @@ My research interests focus on knowledge graph, mainly including
 <h4>Selective Conference/Workshop Publications</h4>
 <p><ul>
     <li style="margin-bottom: 5px">Mathias Jackermeier, Jiaoyan Chen, Ian Horrocks. "Box^2EL: Concept and Role Box Embeddings for the Description Logic EL++". Under work. <A href="https://arxiv.org/abs/2301.11118">Pre-print</A> </li>
-    <li style="margin-bottom: 5px">Hang Dong, Jiaoyan Chen, Yuan He, Yinan Liu, Ian Horrocks. "Reveal the Unknown: Out-of-Knowledge-Base Mention Discovery with Entity Linking Authors". Under work. <A href="https://arxiv.org/abs/2302.07189">Pre-print</A> </li>
     <li style="margin-bottom: 5px">Wen Zhang, Jiaoyan Chen, Juan Li, Zezhong Xu, Jeff Z Pan, Huajun Chen. "Knowledge Graph Reasoning with Logics and Embeddings: Survey and Perspective". Under work. <A href="https://arxiv.org/pdf/2202.07412.pdf">Pre-print</A> </li>
-    <li style="margin-bottom: 5px">Zhuo Chen, Jiaoyan Chen, Lingbing Guo, Yin Fang, Yufeng Huang, Yuxia Geng, Jeff Z Pan, Wenting Song, Huajun Chen. "MEAformer: Multi-modal Entity Alignment Transformer for Meta Modality Hybrid". Under work. <A href="https://arxiv.org/abs/2212.14454">Pre-print</A> </li>
-    <li style="margin-bottom: 5px">Yuan He, Jiaoyan Chen, Ernesto Jiménez-Ruiz, Hang Dong, Ian Horrocks. "Language Model Analysis for Ontology Subsumption Inference". Findings of ACL 2023. <A href="https://arxiv.org/abs/2302.06761">Pre-print</A>, <A href="https://github.com/KRR-Oxford/DeepOnto">Github</A> </li>
+    <li style="margin-bottom: 5px">Hang Dong, Jiaoyan Chen, Yuan He, Ian Horrocks. "Ontology Enrichment from Texts: A Biomedical Dataset for Concept Discovery and Placement". CIKM 2023. <A href="https://arxiv.org/abs/2306.14704">Pre-print</A> </li>
+    <li style="margin-bottom: 5px">Hang Dong, Jiaoyan Chen, Yuan He, Yinan Liu, Ian Horrocks. "Reveal the Unknown: Out-of-Knowledge-Base Mention Discovery with Entity Linking Authors". CIKM 2023. <A href="https://arxiv.org/abs/2302.07189">Pre-print</A> </li>
+    <li style="margin-bottom: 5px">Zhuo Chen, Lingbing Guo, Yin Fang, Yichi Zhang, Jiaoyan Chen, Jeff Z Pan, Yangning Li, Huajun Chen, Wen Zhang. "Rethinking Uncertainly Missing and Ambiguous Visual Modality in Multi-Modal Entity Alignment". ISWC 2023. <A href="https://arxiv.org/abs/2307.16210"> Pre-print</A></li>
+    <li style="margin-bottom: 5px">Zhuo Chen, Jiaoyan Chen, Lingbing Guo, Yin Fang, Yufeng Huang, Yuxia Geng, Jeff Z Pan, Wenting Song, Huajun Chen. "MEAformer: Multi-modal Entity Alignment Transformer for Meta Modality Hybrid". ACM Multimedia 2023. <A href="https://arxiv.org/abs/2212.14454">Pre-print</A> </li>
+    <li style="margin-bottom: 5px">Yong Guan, Jiaoyan Chen, Freddy Lecue, Jeff Pan, Juanzi Li, Ru Li. "Trigger-Argument based Explanation for Event Detection". Findings of ACL 2023. <A href="https://aclanthology.org/2023.findings-acl.312/">Paper</A> </li>
+    <li style="margin-bottom: 5px">Yuan He, Jiaoyan Chen, Ernesto Jiménez-Ruiz, Hang Dong, Ian Horrocks. "Language Model Analysis for Ontology Subsumption Inference". Findings of ACL 2023. <A href="https://aclanthology.org/2023.findings-acl.213/">Paper</A>, <A href="https://github.com/KRR-Oxford/DeepOnto">Github</A> </li>
     <li style="margin-bottom: 5px">Jingchuan Shi, Jiaoyan Chen, Hang Dong, Ishita Khan, Lizzie Liang, Qunzhi Zhou, Zhe Wu, Ian Horrocks. "Subsumption prediction on e-commerce taxonomies". ESWC 2023. <A href="https://link.springer.com/chapter/10.1007/978-3-031-33455-9_15">Paper</A> </li>
     <li style="margin-bottom:5px">Yangning Li, Jiaoyan Chen, Yinghui Li, Yuejia Xiang, Xi Chen, Hai-Tao Zheng. "Vision, Deduction and Alignment: An Empirical Study on Multi-modal Knowledge Graph Alignment". ICASSP 2023. <A href="https://arxiv.org/abs/2302.08774">Paper</A></li>
     <li style="margin-bottom:5px">Zhuo Chen, Yufeng Huang, Jiaoyan Chen, Yuxia Geng, Wen Zhang, Yin Fang, Jeff Z Pan, Wenting Song, Huajun Chen. "DUET: Cross-modal Semantic Grounding for Contrastive Zero-shot Learning". AAAI 2023. <A href="https://arxiv.org/abs/2207.01328">Paper</A></li>
