--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@ My research interests focus on knowledge graphs (including ontologies):
 <h4>Research Grants and Projects</h4>
 <p><ul>
 
+    <li style="margin-bottom:5px">
+        EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 427.9K GBP, 12/2023 - 11/2026, PI.
+    </li>
      <li style="margin-bottom:5px">
         EPSRC "ConCur: Knowledge Graph Construction and Curation" (EP/V050869/1), 1.1M GBP, 12/2021 - 11/2024, Research Co-Investigator (PI: Ian Horrocks).
     </li>
