--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ My research interests focus on knowledge graphs (including ontologies):
     <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=36392">Project4</A>.
 </P>
 
+<P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology, funded by the following EPSRC OntoEm project. Email me your CV if you have interests.</P>
+
 <h4>Research Grants and Projects</h4>
 <p><ul>
 
@@ -129,7 +131,7 @@ My research interests focus on knowledge graphs (including ontologies):
 <p><ul>
     <li style="margin-bottom:5px">Jiaoyan Chen, Hang Dong, Janna Hastings, Ernesto Jiménez-Ruiz, Vanessa Lopez, Pierre Monnin, Catia Pesquita, Petr Škoda, Valentina Tamma. "Knowledge Graphs for the Life Sciences: Recent Developments, Challenges and Opportunities". Transactions on Graph Data and Knowledge. Accepted with Minor Revision. <A href="https://browse.arxiv.org/pdf/2309.17255.pdf">Pre-print</A></li>
     <li style="margin-bottom:5px">Jeff Z Pan, Simon Razniewski, Jan-Christoph Kalo, Sneha Singhania, Jiaoyan Chen, Stefan Dietze, etc. "Large Language Models and Knowledge Graphs: Opportunities and Challenges". Transactions on Graph Data and Knowledge. Accepted with Minor Revision <A href="https://arxiv.org/abs/2308.06374">Pre-print</A> </li>
-    <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ian Horrocks, Carlo Allocca, Taehun Kim, Brahmananda Sapkota. "DeepOnto: A Python Package for Ontology Engineering with Deep Learning". Under work. <A href="https://arxiv.org/abs/2307.03067">Pre-print</A> </li>
+    <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ian Horrocks, Carlo Allocca, Taehun Kim, Brahmananda Sapkota. "DeepOnto: A Python Package for Ontology Engineering with Deep Learning". Semantic Web Journal (minior revision). <A href="https://arxiv.org/abs/2307.03067">Pre-print</A> </li>
     <li style="margin-bottom:5px">Norman Paton, Jiaoyan Chen, Zhenyu Wu. "Dataset Discovery and Exploration: A Survey". ACM Computing Surveys. 2023. <A href="https://dl.acm.org/doi/abs/10.1145/3626521">Paper</A> </li>
     <li style="margin-bottom:5px">Jiaoyan Chen, Yuxia Geng, Zhuo Chen, Jeff Z. Pan, Yuan He, Wen Zhang, Ian Horrocks and Huajun Chen. "Zero-shot and Few-shot Learning with Knowledge Graphs: A Comprehensive Survey". Proceedings of the IEEE (2023). <A href="https://ieeexplore.ieee.org/document/10144560">Paper</A></li>
     <li style="margin-bottom: 5px">Jiaoyan Chen, Yuan He, Yuxia Geng, Ernesto Jimenez-Ruiz, Hang Dong, Ian Horrocks. "Contextual Semantic Embeddings for Ontology Subsumption Prediction". World Wide Web Journal (2023). <A href="https://link.springer.com/article/10.1007/s11280-023-01169-9">Paper</A>, <A href="https://github.com/KRR-Oxford/DeepOnto">Github</A></li>
@@ -151,10 +153,10 @@ My research interests focus on knowledge graphs (including ontologies):
 <p><ul>
     <li style="margin-bottom: 5px">Mathias Jackermeier, Jiaoyan Chen, Ian Horrocks. "Box^2EL: Concept and Role Box Embeddings for the Description Logic EL++". Under work. <A href="https://arxiv.org/abs/2301.11118">Pre-print</A>, <A href="https://github.com/KRR-Oxford/BoxSquaredEL">Github</A> </li>
     <li style="margin-bottom: 5px">Wen Zhang, Jiaoyan Chen, Juan Li, Zezhong Xu, Jeff Z Pan, Huajun Chen. "Knowledge Graph Reasoning with Logics and Embeddings: Survey and Perspective". Under work. <A href="https://arxiv.org/pdf/2202.07412.pdf">Pre-print</A> </li>
-    <li style="margin-bottom: 5px">Hang Dong, Jiaoyan Chen, Yuan He, Ian Horrocks. "Ontology Enrichment from Texts: A Biomedical Dataset for Concept Discovery and Placement". CIKM 2023 (Resource). <A href="https://arxiv.org/abs/2306.14704">Paper</A>, <A href="https://zenodo.org/record/8228005">Dataset</A> </li>
+    <li style="margin-bottom: 5px">Hang Dong, Jiaoyan Chen, Yuan He, Ian Horrocks. "Ontology Enrichment from Texts: A Biomedical Dataset for Concept Discovery and Placement". CIKM 2023 (<b>Best Resource Paper Runner-up</b>). <A href="https://arxiv.org/abs/2306.14704">Paper</A>, <A href="https://zenodo.org/record/8228005">Dataset</A> </li>
     <li style="margin-bottom: 5px">Hang Dong, Jiaoyan Chen, Yuan He, Yinan Liu, Ian Horrocks. "Reveal the Unknown: Out-of-Knowledge-Base Mention Discovery with Entity Linking Authors". CIKM 2023. <A href="https://arxiv.org/abs/2302.07189">Paper</A>, <A href="https://github.com/KRR-Oxford/BLINKout">Github</A> </li>
     <li style="margin-bottom: 5px">Yuan He, Jioayan Chen, Hang Dong, Ian Horrocks. "Exploring Large Language Models for Ontology Alignment". ISWC 2023 (Poster). <A href="https://browse.arxiv.org/pdf/2309.07172.pdf">Paper</A>, <A href="https://github.com/KRR-Oxford/DeepOnto">Github</A></li>
-    <li style="margin-bottom: 5px">Zhuo Chen, Lingbing Guo, Yin Fang, Yichi Zhang, Jiaoyan Chen, Jeff Z Pan, Yangning Li, Huajun Chen, Wen Zhang. "Rethinking Uncertainly Missing and Ambiguous Visual Modality in Multi-Modal Entity Alignment". ISWC 2023. <A href="https://arxiv.org/abs/2307.16210">Paper</A>, <A href="https://github.com/zjukg/UMAEA">Github</A></li>
+    <li style="margin-bottom: 5px">Zhuo Chen, Lingbing Guo, Yin Fang, Yichi Zhang, Jiaoyan Chen, Jeff Z Pan, Yangning Li, Huajun Chen, Wen Zhang. "Rethinking Uncertainly Missing and Ambiguous Visual Modality in Multi-Modal Entity Alignment". ISWC 2023 (<b>Best Paper Nominee</b>). <A href="https://arxiv.org/abs/2307.16210">Paper</A>, <A href="https://github.com/zjukg/UMAEA">Github</A></li>
     <li style="margin-bottom: 5px">Zhuo Chen, Jiaoyan Chen, Lingbing Guo, Yin Fang, Yufeng Huang, Yuxia Geng, Jeff Z Pan, Wenting Song, Huajun Chen. "MEAformer: Multi-modal Entity Alignment Transformer for Meta Modality Hybrid". ACM Multimedia 2023. <A href="https://arxiv.org/abs/2212.14454">Paper</A>, <A href="https://github.com/zjukg/MEAformer">Github</A> </li>
     <li style="margin-bottom: 5px">Yong Guan, Jiaoyan Chen, Freddy Lecue, Jeff Pan, Juanzi Li, Ru Li. "Trigger-Argument based Explanation for Event Detection". Findings of ACL 2023. <A href="https://aclanthology.org/2023.findings-acl.312/">Paper</A> </li>
     <li style="margin-bottom: 5px">Yuan He, Jiaoyan Chen, Ernesto Jiménez-Ruiz, Hang Dong, Ian Horrocks. "Language Model Analysis for Ontology Subsumption Inference". Findings of ACL 2023. <A href="https://aclanthology.org/2023.findings-acl.213/">Paper</A>, <A href="https://github.com/KRR-Oxford/DeepOnto">Github</A> </li>
@@ -216,11 +218,13 @@ My research interests focus on knowledge graphs (including ontologies):
 
 <h4>Student (Co-)Supervision</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 2022 - now)</li>
+    <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD student from Xi'an Jiaotong University, to start in 12/2023)</li>
+    <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li>
+    <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 11/2022 - now)</li>
     <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - now)</li>
     <li style="margin-bottom:5px">Yuan He (PhD, Department of Computer Science, University of Oxford, 2020 - now)</li>
     <li style="margin-bottom:5px"><A href="https://genggengcss.github.io/">Yuxia Geng</A> (PhD, College of Computer Science and Technology, Zhejiang University, 2018 - 2023)</li>
-    <li style="margin-bottom:5px"><A href="https://sirius-labs.no/erik-bryhn-myklebust-phd-candidate/">Erik Bryhn Myklebust</A> (PhD, NIVA & SIRIUS, University of OSLO, 2019 - 2022)</li>
+    <li style="margin-bottom:5px"><A href="https://sirius-labs.no/erik-bryhn-myklebust-phd-candidate/">Erik Bryhn Myklebust</A> (PhD, NIVA & SIRIUS, University of OSLO, 2019 - 2022) (external co-supervisor)</li>
     <li style="margin-bottom:5px">Mathias Jackermeier (MSc, Department of Computer Science, University of Oxford, 2022)</li>
     <li style="margin-bottom:5px">Zhengyi Xiao (MSc, Department of Computer Science, University of Oxford, 2022)</li>
     <li style="margin-bottom:5px">Yan Zhou (MSc, GIScience, University of Heidelberg, 2016 - 2017)</li>
